<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_settings">Settings</string>
    <string name="send">Send</string>
    <string name="sendMessage">sendMessage</string>
    <string name="emptystring"></string>
    
    <string name="app_name">TikalShare</string>
    <string name="action_loading">Loading</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Section 4</string>
    
    <string name="preferences_title">Prefrences</string>
    <string name="user_name">YouTube User Name</string>
    <string name="user_name_summary">YouTube User Name For Playlist</string>
    <string name="download_thumbnail">Download Video Thumbnail</string>
    <string name="download_thumbnail_summary">Download Video Thumbnail</string>
    <string name="cache_timeout">Cache Timeout</string>
    <string name="cache_timeout_summary">Units is in Hours</string>
    
    
</resources>