<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preferences_title" >

        <EditTextPreference
            android:id="@+id/userName"
            android:defaultValue="default"
            android:key="userName"
            android:summary="@string/user_name_summary"
            android:title="@string/user_name" />

        <CheckBoxPreference
            android:id="@+id/downloadThumbnail"
            android:defaultValue="true"
            android:key="downloadThumbnail"
            android:summary="@string/download_thumbnail_summary"
            android:title="@string/download_thumbnail" />
        
        <EditTextPreference
            android:id="@+id/chacheTime"
            android:inputType="numberSigned"
            android:defaultValue="24"
            android:key="cacheTimeout"
            android:summary="@string/cache_timeout_summary"
            android:title="@string/cache_timeout" />
        
    </PreferenceCategory>

</PreferenceScreen>